Closed
Bug 262641
Opened 21 years ago
Closed 18 years ago
Import of account settings from Outlook Express misses SSL/port number/root folder
Categories
(MailNews Core :: Import, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9.1b2
People
(Reporter: mozilla, Assigned: sivakrishna)
References
Details
Attachments
(2 files, 2 obsolete files)
|
3.62 KB,
patch
|
neil
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
|
713 bytes,
patch
|
neil
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)
Build Identifier: Thunderbird 0.8 (20040913)
I have a secure IMAP account set up in Outlook Express. When I installed and
ran Thunderbird, it helpfully imported most of my account details, but missed:
the fact that it was an SSL connection; the port; and the IMAP root folder.
Reproducible: Didn't try
Steps to Reproduce:
1. Set up secure IMAP account in Outlook Express
2. Install and run Thunderbird
3. Accept offer to import settings from Outlook Express
4. View resultant account settings in Thunderbird
Actual Results:
The IMAP server and user name were imported, but not the fact that it was a
secure connection; nor the port; not the root folder. These had to be entered
manually.
Expected Results:
All account settings are copied
Having a look in the registry, the following keys
under ...\Software\Microsoft\Internet Account Manager\Accounts\00000008
contain the relevant information (for my account):
"IMAP Secure Connection" DWORD 1
"IMAP Port" DWORD 8000
"IMAP Root Folder" SZ "mail"
I would guess that the relevant source file
is /mailnews/import/oexpress/nsOESettings.cpp
Comment 1•21 years ago
|
||
*** Bug 277494 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Import of account settings from Outlook Express misses some IMAP details → Import of account settings from Outlook Express misses SSL/port/root folder(IMAP)
Comment 2•21 years ago
|
||
*** Bug 273711 has been marked as a duplicate of this bug. ***
Had similar problem when importing OE settings.
It didn't detect that I had the SSL setting on,
when sending with SMTP!
Zyron
(In reply to comment #3)
> Had similar problem when importing OE settings.
> It didn't detect that I had the SSL setting on,
> when sending with SMTP!
> Zyron
One more problem:
I had one account set to port 111 (pop),
and it didn't catch that. Had to change manually.
The Outlook import also misses if an outgoing SMTP server does not require any
username or password.
We had to change that manually by unchecking Edit -> Acount Settings -> Outgoing
Server (SMTP) -> Use name and password
The import had erroneously checked that box and filled in some user name.
As a result when trying to send an e-mail we got the following error message:
"Sending of message failed. The message could not be sent because connecting to
SMTP server mail.XXX.com failed. The server may be unavailable or is refusing
SMTP connections. Please verify that your SMTP server setting is correct and try
again, or else contact your network administrator."
I guess this message could be a bit more specific...
Comment 7•21 years ago
|
||
*** Bug 305633 has been marked as a duplicate of this bug. ***
Comment 8•21 years ago
|
||
I haven't tested this yet. This patch should migrate the port, the use SSL
setting and the IMAP root folder string.
Comment 9•20 years ago
|
||
can anyone on the cc list test this patch if I check it in?
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird2.0
Summary: Import of account settings from Outlook Express misses SSL/port/root folder(IMAP) → Import of account settings from Outlook Express misses SSL/port number/root folder
Updated•19 years ago
|
QA Contact: migration
Comment 11•18 years ago
|
||
Joshua could you take a look into patch? If we still interested to checkin it
Target Milestone: Thunderbird2.0 → ---
Comment 12•18 years ago
|
||
This needs someone with Windows experience to test... Neil?
Comment 13•18 years ago
|
||
* Updated for bitrot (string API changes)
* Added a missing header for atoi
* Fixed a null crash introduced in attachment 258018 [details] [diff] [review]
Attachment #193615 -
Attachment is obsolete: true
Attachment #329430 -
Flags: superreview?(bienvenu)
Attachment #329430 -
Flags: review+
Updated•18 years ago
|
Attachment #329430 -
Flags: superreview?(bienvenu) → superreview+
Comment 14•18 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Product: Core → MailNews Core
Updated•18 years ago
|
Component: Migration → MailNews: Import
Product: Thunderbird → Core
Target Milestone: --- → mozilla1.9.1a1
| Assignee | ||
Comment 15•17 years ago
|
||
After importing IMAP settings from outlook express, the port value is set as 0.
Attached patch fixes it. "IMAP Port" registry entry is stored as REG_DWORD (32-bit number) type.
Attachment #344799 -
Flags: review?(neil)
Comment 16•17 years ago
|
||
Comment on attachment 344799 [details] [diff] [review]
Fix for correct port value
>+ in->SetPort(*(int *) pPort);
I'd prefer PRInt32 rather than int.
Attachment #344799 -
Flags: review?(neil) → review+
| Assignee | ||
Comment 17•17 years ago
|
||
Updated to include POP3 port handling & use PRInt32 instead of int
Attachment #344799 -
Attachment is obsolete: true
Attachment #344802 -
Flags: review?(neil)
Updated•17 years ago
|
QA Contact: migration → import
Updated•17 years ago
|
Attachment #344802 -
Flags: review?(neil) → review+
Attachment #344802 -
Flags: superreview?(bienvenu)
Comment 18•17 years ago
|
||
Comment on attachment 344802 [details] [diff] [review]
Fix for correct port value (for POP3 server also)
[Checkin: Comment 19]
thx for the patch.
Attachment #344802 -
Flags: superreview?(bienvenu) → superreview+
Updated•17 years ago
|
Assignee: mscott → sivakrishna
Keywords: checkin-needed
Comment 19•17 years ago
|
||
Comment on attachment 344802 [details] [diff] [review]
Fix for correct port value (for POP3 server also)
[Checkin: Comment 19]
http://hg.mozilla.org/comm-central/rev/997de6d66055
NB: Please, attach full path (Hg) patches in the future.
Attachment #344802 -
Attachment description: Fix for correct port value (for POP3 server also) → Fix for correct port value (for POP3 server also)
[Checkin: Comment 19]
Updated•17 years ago
|
Keywords: checkin-needed
Target Milestone: mozilla1.9.1a1 → mozilla1.9.1b2
Version: unspecified → Trunk
Comment 20•17 years ago
|
||
Looks like this line causes some tinderbox red
in->SetPort(*(PRInt32 *) pPort);
http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1225734967.1225735502.2378.gz
Building deps for /e/builds/slave/comm-central-win32/build/mailnews/import/oexpress/nsOESettings.cpp
cl -FonsOESettings.obj -c -DMOZILLA_INTERNAL_API -DMOZ_SUITE=1 -DSUITE_USING_XPFE_DM=1 -DOSTYPE=\"WINNT5.2\" -DOSARCH=WINNT -I/e/builds/slave/comm-central-win32/build/mailnews/import/oexpress -I. -I../../../mozilla/dist/include/xpcom -I../../../mozilla/dist/include/string -I../../../mozilla/dist/include/import -I../../../mozilla/dist/include/addrbook -I../../../mozilla/dist/include/mork -I../../../mozilla/dist/include/intl -I../../../mozilla/dist/include/msgbase -I../../../mozilla/dist/include/pref -I../../../mozilla/dist/include/necko -I../../../mozilla/dist/include/msgdb -I../../../mozilla/dist/include/msgbaseutil -I../../../mozilla/dist/include/msgcompose -I../../../mozilla/dist/include/msglocal -I../../../mozilla/dist/include/msgimap -I../../../mozilla/dist/include/unicharutil -I../../../mozilla/dist/include -I../../../mozilla/dist/include/importOE -I../../../mozilla/dist/include/nspr -DLCMS_DLL -GR- -TP -nologo -Zc:wchar_t- -W3 -Gy -FdimportOE_s.pdb -DNDEBUG -DTRIMMED -Zi -UDEBUG -DNDEBUG -O1 -MD -D_CRT_SECURE_NO_DEPRECATE=1 -D_CRT_NONSTDC_NO_DEPRECATE=1 -DWINVER=0x500 -D_WIN32_WINNT=0x500 -D_WIN32_IE=0x0500 -DX_DISPLAY_MISSING=1 -DMOZILLA_VERSION=\"1.9.1b2pre\" -DMOZILLA_VERSION_U=1.9.1b2pre -DHAVE_SNPRINTF=1 -D_WINDOWS=1 -D_WIN32=1 -DWIN32=1 -DXP_WIN=1 -DXP_WIN32=1 -DHW_THREADS=1 -DSTDC_HEADERS=1 -DWIN32_LEAN_AND_MEAN=1 -DNO_X11=1 -DHAVE_MMINTRIN_H=1 -DHAVE_OLEACC_IDL=1 -DHAVE_ATLBASE_H=1 -DHAVE_WPCAPI_H=1 -D_X86_=1 -DD_INO=d_ino -DMOZ_EMBEDDING_LEVEL_DEFAULT=1 -DMOZ_EMBEDDING_LEVEL_BASIC=1 -DMOZ_EMBEDDING_LEVEL_MINIMAL=1 -DMOZ_SUITE=1 -DMOZ_BUILD_APP=suite -DMOZ_XUL_APP=1 -DMOZ_DEFAULT_TOOLKIT=\"cairo-windows\" -DMOZ_DISTRIBUTION_ID=\"org.mozilla\" -DIBMBIDI=1 -DMOZ_VIEW_SOURCE=1 -DACCESSIBILITY=1 -DMOZ_XPINSTALL=1 -DMOZ_JSLOADER=1 -DNS_PRINTING=1 -DNS_PRINT_PREVIEW=1 -DMOZ_NO_XPCOM_OBSOLETE=1 -DMOZ_XTF=1 -DMOZ_UPDATE_CHANNEL=nightly -DMOZ_FEEDS=1 -DMOZ_STORAGE=1 -DMOZ_HELP_VIEWER=1 -DMOZ_LOGGING=1 -DMOZ_MEMORY_SIZEOF_PTR_2POW=2 -DMOZ_MEMORY=1 -DMOZ_MEMORY_WINDOWS=1 -D_STATIC_CPPLIB=1 -DMOZ_USER_DIR=\"Mozilla\" -DMOZ_STATIC_MAIL_BUILD=1 -DMOZ_TREE_CAIRO=1 -DHAVE_UINT64_T=1 -DMOZ_XUL=1 -DMOZ_PROFILELOCKING=1 -DMOZ_RDF=1 -DMOZ_MORK=1 -DMOZ_DLL_SUFFIX=\".dll\" -DJS_THREADSAFE=1 -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /e/builds/slave/comm-central-win32/build/mailnews/import/oexpress/nsOESettings.cpp
nsOESettings.cpp
e:/builds/slave/comm-central-win32/build/mailnews/import/oexpress/nsOESettings.cpp(443) : error C2059: syntax error : ')'
make[6]: Leaving directory `/e/builds/slave/comm-central-win32/build/objdir/mailnews/import/oexpress'
make[5]: Leaving directory `/e/builds/slave/comm-central-win32/build/objdir/mailnews/import'
make[4]: Leaving directory `/e/builds/slave/comm-central-win32/build/objdir/mailnews'
make[3]: Leaving directory `/e/builds/slave/comm-central-win32/build/objdir'
make[2]: Leaving directory `/e/builds/slave/comm-central-win32/build/objdir'
make[6]: *** [nsOESettings.obj] Error 2
make[5]: *** [libs] Error 2
make[4]: *** [libs] Error 2
make[3]: *** [libs_tier_app] Error 2
make[2]: *** [tier_app] Error 2
make[1]: Leaving directory `/e/builds/slave/comm-central-win32/build/objdir'
make[1]: *** [default] Error 2
make: *** [build] Error 2
Comment 21•17 years ago
|
||
Fix pushed - changeset: 807:47e9e30342e6
http://hg.mozilla.org/comm-central/rev/47e9e30342e6
You need to log in
before you can comment on or make changes to this bug.
Description
•