Bug 262641 Import SSL and port setting from Outlook Express p=mscott sr=bienvenu